@@ -97,6 +97,7 @@ gerritclient =
     project_branch_show=gerritclient.commands.project:ProjectBranchShow
     project_child_list=gerritclient.commands.project:ProjectChildList
     project_configuration_download=gerritclient.commands.project:ProjectConfigDownload
+    project_configuration_set=gerritclient.commands.project:ProjectConfigSet
     project_create=gerritclient.commands.project:ProjectCreate
     project_delete=gerritclient.commands.project:ProjectDelete
     project_description_set=gerritclient.commands.project:ProjectDescriptionSet
