@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Add new 'gerrit project configuration set' command and API
 * Add new 'gerrit project configuration download' command and API
 * Add match and regex parameters to tag list related command
 * Add skip and limit parameters to tag list related command
